# PurgeProof

./: .gitignore  COMPLIANCE_REPORT.md  COMPLIANCE_REPORT_ENHANCED.md  ENTERPRISE_TEMPLATE_DELIVERY.md  ENTERPRISE_VALIDATION_REPORT.md  HYBRID_ENHANCEMENT_PLAN.md  MANIFEST.in  README.md  README_ENHANCED.md  SYSTEM_CHECK_COMPLETE.md  USB_BUILD_GUIDE.md  benchmark.py  build_enhanced.py  build_peak.py  build_usb.py  cli_working.py  organize_project.py  purgeproof_audit.jsonl  purgeproof_ca_cert.pem  purgeproof_ca_key.pem  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_manual.py  test_system.py  usb_demo.py
.github/workflows/: ci-cd.yml
bootable/: __init__.py  build-iso.bat  build-iso.sh  deployment.py  hardware_detection.py
cli/: __init__.py  purgeproof-cli.py  utils.py
config/: default.yaml  offline.yaml
docs/: API.md  API_DOCUMENTATION.md  CICD.md  COMPLIANCE.md  DEPLOYMENT_GUIDE.md  ENTERPRISE_ROADMAP.md  EVIDENCE_PACK_TEMPLATE.md  OPERATIONS.md  USER_MANUAL.md
docs/compliance/: summary.md
docs/developer_guide/: contributing.md  documentation_enhancements.md  project_summary.md  status_report.md
docs/images/: README.md  banner_placeholder.md
docs/performance/: speed_analysis.md
docs/user_guide/: index.md  overview.md  quickstart.md  usb_build_guide.md
engine/: Cargo.toml
engine/src/: crypto_erase.rs  crypto_erase_enhanced.rs  device.rs  ffi.rs  lib.rs  lib_enhanced.rs  overwrite.rs  parallel.rs  smart_selection.rs  trim_support.rs  utils.rs  verification.rs
purgeproof/: __init__.py  __main__.py  certification.py  cli.py  compliance.py  decision_engine.py  device_utils.py  ffi_bindings.py  gui.py  orchestrator.py  performance_monitor.py  sampling_verification.py
samples/: README.md
samples/audit/: operator_log.csv
samples/certs/: sanitization_WD1234567890_crypto_erase_20250912_143215.json
samples/device_info/: device_list_20250912_143022.json
samples/forensics/: recovery_attempt_WD1234567890_crypto_erase_20250912_143400.md
samples/verification/: cert_verification_WD1234567890_crypto_erase_20250912_143301.txt
scripts/: build_usb.bat  generate_docs.py  install.py  launcher.py  offline_launcher.py
tests/: __init__.py  conftest.py  requirements.py  run_tests.py  test_certificates.py  test_config.py  test_device_utils.py  test_gui.py  test_integration.py  test_logging.py  test_purgeproof.py
tests/integration/: test_cli.py
tests/performance/: test_perf.py
tests/unit/: test_minimal.py
wipeit/: __init__.py  benchmark.py  certs.py  cli.py  config.py  gui.py  logging.py  requirements.txt
wipeit/cli/: fast_wipe_cli.py  main.py  simple_main.py
wipeit/core/: __init__.py  certificates.py  crypto_utils.py  device_utils.py  fast_wipe.py  verification.py  wipe_engine.py  wipe_engine_enhanced.py  wipe_engine_peak.py
wipeit/gui/: __init__.py  gui_pyqt.py  main.py
