[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purgeproof"
version = "2.1.0"
description = "Enterprise-grade data sanitization solution with hybrid Rust/Python architecture"
authors = [
    {name = "PurgeProof Team", email = "contact@purgeproof.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "cryptography>=3.4",
    "pyyaml>=5.4",
    "click>=8.0",
    "tkinter",
    "tqdm>=4.60.0",
    "colorama>=0.4.4",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.9",
    "maturin>=1.0.0",
]
gui = [
    "PyQt6>=6.0.0",
    "PyQt6-tools>=6.0.0",
]

[project.scripts]
purgeproof = "purgeproof.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
